# rs-data-api

./: Cargo.toml  README.md
bkp/: bkp_iinsert_one.rs  bkp_insert_many.rs
src/: lib.rs  main.rs  mdb.rs
src/app/: mod.rs
src/crud/: delete_many.rs  delete_one.rs  find.rs  find_one.rs  insert_many.rs  insert_one.rs  mod.rs  update_many.rs  update_one.rs
src/ejson/: from_request.rs  into_response.rs  mod.rs
src/web/: custom_parser.rs  ejson.rs  find_one.rs  insert_one.rs  mod.rs  routes_login.rs
tests/: delete_many.rs  delete_one.rs  ejson_test.rs  find.rs  find_one.rs  find_one_test.rs  insert_many.rs  insert_one.rs  quick_dev.rs  update_many.rs  update_one.rs
tests/helpers/: mod.rs
