[package]
name = "rs-data-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = "1.0.206"
serde_json = "1.0.124"
mongodb = "3.0.1"
tokio = { version = "1.39.2", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.10"
reqwest = { version = "0.12.5", features = ["json"] }
